# LLMFLOW

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
app/: main.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  events.py  jobs.py  places.py  products.py  reviews.py  source_config.py  units.py  users.py  ws.py
app/core/: config.py  exceptions.py  logging.py  security.py  websocket_auth.py
app/db/: base.py  redis.py  session.py
app/domain/: events.py  types.py
app/models/: __init__.py  archetype.py  competitor.py  email_verification.py  job.py  organization.py  places.py  product.py  review.py  source_config.py  source_group.py  token.py  twofa.py  unit.py  user.py
app/repositories/: archetype_repo.py  job_repo.py  product_repo.py  review_repo.py  source_config_repo.py  user_repo.py
app/schemas/: auth.py  events.py  jobs.py  organization.py  user.py  websocket.py
app/services/: auth_services.py  connection_manager_service.py  event_dispatcher_service.py  job_service.py  mailer.py  product_discovery_service.py  review_ingest_services.py  user_service.py
app/workers/: __init__.py  queue.py  registry.py  scheduler.py  tasks.py
app/workers/base/: __init__.py  event_emitter.py  progress.py  task.py
app/workers/tasks/: __init__.py
app/workers/tasks/archetypes/: __init__.py  (+2 more)
deprecate/: arquetype.py  auth.py  main.py  schema.sql  utilsdb.py  worker.py
inisghts-front/: index.html  package-lock.json  package.json  tsconfig.app.json
inisghts-front/services/: sseService.ts
inisghts-front/src/: App.vue
inisghts-front/src/components/: JobStatusModal.vue  SourceConfigCard.vue
inisghts-front/src/services/: axiosInstance.ts
inisghts-front/src/views/: AdminPanel.vue  Analytics.vue  ArchetypeChat.vue  Archetypes.vue  BrandProfileSources.vue  CompetitorsView.vue  Dashboard.vue  GenerateReport.vue  MySources.vue  SourcesLanding.vue
insights-api/: pyproject.toml
insights-api/app/: main.py
insights-api/app/api/: deps.py
insights-api/app/core/: config.py  exceptions.py  logging.py  security.py  websocket_auth.py
insights-api/app/db/: redis.py  session.py
insights-api/app/domain/: events.py  types.py
insights-api/app/models/: __init__.py  archetype.py  competitor.py  email_verification.py  job.py  organization.py  places.py  product.py  review.py  source_config.py  source_group.py  token.py  twofa.py  unit.py  user.py
insights-api/app/repositories/: archetype_repo.py  job_repo.py  product_repo.py  review_repo.py  source_config_repo.py  user_repo.py
insights-api/app/schemas/: auth.py  events.py  jobs.py  organization.py  products.py  user.py  websocket.py
insights-api/app/services/: connection_manager_service.py  event_dispatcher_service.py  job_service.py  mailer.py  product_discovery_service.py  review_ingest_services.py  user_service.py
insights-api/app/workers/: __init__.py  queue.py  registry.py  scheduler.py  tasks.py
insights-api/scripts/: init-pgvector.sql  table_creation.py  test_jobs.py
insights-api/tests/: conftest.py
insights-api/tests/integration/: test_complete_auth_flow.py
insights-api/tests/utils/: factories.py  helpers.py
insights-front/: tailwind.config.js  vite.config.ts
insights-front/src/: main.ts  style.css
insights-front/src/components/: AddCompetitorModal.vue  AddSourceModal.vue  CollapsibleSection.vue  ConfirmationModal.vue  LowReviewsWarningModal.vue  Sidebar.vue  TopBar.vue
insights-front/src/router/: index.ts
insights-front/src/services/: axiosInstance.ts
insights-front/src/store/: reportStore.ts
insights-front/src/views/: AdminDashboard.vue  AdminLoginView.vue  Chat2Data.vue  CompetitorSources.vue  ConnectCompetitorSources.vue  ConnectMySources.vue  ConnectSources.vue  GeneratedReports.vue  HomeView.vue  LoginView.vue  ReportDetail.vue
scripts/: init-pgvector.sql  table_creation.py  test_jobs.py
tests/: conftest.py
tests/fixtures/: jobs.py  places.py  products.py  reviews.py  source_configs.py  users.py
tests/integration/: test_complete_auth_flow.py
tests/unit/services/: test_auth_services.py
tests/utils/: assertions.py  auth_utils.py  db_utils.py  factories.py  helpers.py  mock_helpers.py
(+39 files in other folders)
